fix contrast ratio of card headers

--- a/app/assets/stylesheets/tylium/modules/issues/_issues.scss
+++ b/app/assets/stylesheets/tylium/modules/issues/_issues.scss
@@ -35,7 +35,7 @@ body.issues.index {
 
     .card-header {
       background: $darkColor;
-      color: $lightColor;
+      color: lighten($lightColor, 5%);
 
       .card-title {
         margin-bottom: 0;
